--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,6 @@
+@charset "UTF-8";
+@import url("https://cdn.uadigital.arizona.edu/lib/ua-brand-fonts/1.0.0/milo.min.css");
+
 #ua-web-branding-banner-v1:after,
 .block--thumb-headline__more-link:after,
 .block [class*=content]:after,
