--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1215,3 +1215,21 @@ fieldset.collapsed {
 #s-lg-admin-edit-content-link-container a {
     color: #e2e9eb;
 }
+
+.navbar-default .navbar-nav > li.s-lib-app-dropdown > a {
+    font-family: Arial, Helvetica, Verdana;
+    font-weight: 700;
+    line-height: 20px;
+    letter-spacing: normal;
+}
+
+header.s-lib-cmd-bar {
+    position: relative;
+}
+
+.navbar-default #s-lg-admin-command-bar .navbar-nav > li > a {
+    color: rgb(50, 50, 50);
+    letter-spacing: normal;
+    font-size: 12px;
+    font-family: Arial, Helvetica, Veranda
+}
