Hide border for FAQ search box.

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1520,3 +1520,7 @@ div#libchat_07713bc057f66ebcdccd4dd1b4a2be3e button.libchat_offline {
 .s-lib-box-content a {
     font-weight: normal;
 }
+
+#s-lg-box-23419281 {
+    border: none;
+}
