--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1521,8 +1521,42 @@ div#libchat_07713bc057f66ebcdccd4dd1b4a2be3e button.libchat_offline {
     font-weight: normal;
 }
 
+
+/* Remove border around FAQ box */
 #s-lg-box-23419281 {
     border: none;
+}
+
+.s-la-widget .btn-primary {
+    color: #fff !important;
+    background-color: #8b0015 !important;
+    border-color: #8b0015 !important;
+    border-width: 2px !important;
+    background-clip: border-box !important;
+    border-radius: 0 !important;
+    -webkit-transition: all .1s ease-in-out;
+    transition: all .1s ease-in-out;
+    text-transform: uppercase;
+    letter-spacing: .04em;
+    cursour: pointer;
+    font-weight: 700 !important;
+}
+
+.s-la-widget .btn-primary:hover {
+    color: #fff;
+    background-color: #ab0520 !important;
+    border-color: #ab0520 !important;
+}
+
+#s-la-content-search-query-11022 {
+    border-radius: 0 !important;
+}
+
+#s-la-content-search-query-11022:focus {
+    border-color: #9eabae;
+    outline: 0;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(158,171,174,.6);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(158,171,174,.6);
 }
 
 
