--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1577,3 +1577,7 @@ div#libchat_07713bc057f66ebcdccd4dd1b4a2be3e button.libchat_offline {
         float: right !important;
     }
 }
+
+.s-lib-box ul li a {
+    font-size: 14px;
+}
