Another test commit

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1583,5 +1583,5 @@ div#libchat_07713bc057f66ebcdccd4dd1b4a2be3e button.libchat_offline {
 }
 
 body {
-    background-color: green !important;
+    background-color: hotpink !important;
 }
